// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callbacks clears 1`] = `
[MockFunction] {
  "calls": Array [
    Array [],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`callbacks submits 1`] = `
[MockFunction] {
  "calls": Array [
    Array [],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`renders as expected (with query param) 1`] = `
<div>
  <input
    autoComplete="off"
    className="form-control"
    id="search_str"
    name="search"
    onChange={[MockFunction]}
    placeholder="Advanced search"
    type="text"
    value="query"
  />
  <Button
    className="btn-apply btn-advanced-search"
    onClick={[MockFunction]}
  >
    Search
  </Button>
  <Button
    className="btn-clear btn-margin-left"
    onClick={[MockFunction]}
  >
    Clear
  </Button>
</div>
`;

exports[`renders as expected (without query param) 1`] = `
<div>
  <input
    autoComplete="off"
    className="form-control"
    id="search_str"
    name="search"
    onChange={[MockFunction]}
    placeholder="Advanced search"
    type="text"
    value="query"
  />
  <Button
    className="btn-apply btn-advanced-search"
    onClick={[MockFunction]}
  >
    Search
  </Button>
</div>
`;
